load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "events.go",
        "graphql.go",
        "main.go",
        "ping.go",
        "pusher_auth.go",
        "secret_config.go",
        "stripe_callback.go",
        "tasks.go",
    ],
    importpath = "github.com/mjm/courier-js/cmd/courier-functions",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/functions:go_default_library",
        "//internal/functions/events:go_default_library",
        "//internal/functions/graphql:go_default_library",
        "//internal/functions/ping:go_default_library",
        "//internal/functions/pusherauth:go_default_library",
        "//internal/functions/stripecb:go_default_library",
        "//internal/functions/tasks:go_default_library",
        "//internal/secret:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_binary(
    name = "courier-functions",
    embed = [":go_default_library"],
    tags = ["no-cache"],
    visibility = ["//visibility:public"],
)
