load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "events.go",
        "graphql.go",
        "main.go",
        "ping.go",
        "pusher_auth.go",
        "stripe_callback.go",
    ],
    importpath = "github.com/mjm/courier-js/cmd/courier-functions",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/functions:go_default_library",
        "//internal/functions/events:go_default_library",
        "//internal/functions/graphql:go_default_library",
        "//internal/functions/ping:go_default_library",
        "//internal/functions/pusherauth:go_default_library",
        "//internal/functions/stripecb:go_default_library",
        "//internal/trace:go_default_library",
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/sqs:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
    ],
)

go_binary(
    name = "courier-functions",
    data = ["//:schema.graphql"],
    embed = [":go_default_library"],
    tags = ["no-cache"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/mjm/courier-js/internal/trace.ServiceVersion": "{GIT_COMMIT_SHA}",
    },
)
