load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "feed.go",
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/mjm/courier-js/cmd/courierctl",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/auth:go_default_library",
        "//internal/billing:go_default_library",
        "//internal/config:go_default_library",
        "//internal/db:go_default_library",
        "//internal/event:go_default_library",
        "//internal/secret:go_default_library",
        "//internal/shared/model:go_default_library",
        "//internal/tasks:go_default_library",
        "//internal/trace:go_default_library",
        "//internal/write:go_default_library",
        "//internal/write/feeds:go_default_library",
        "//internal/write/shared:go_default_library",
        "//internal/write/tweets:go_default_library",
        "@com_github_honeycombio_libhoney_go//:go_default_library",
        "@com_github_jonboulle_clockwork//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
    ],
)

go_binary(
    name = "courierctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
