load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/courier-js/cmd/upload-functions",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/awserr:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_bazelbuild_rules_docker//container/go/pkg/compat:go_default_library",
    ],
)

go_binary(
    name = "upload-functions",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
