load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/package_managers:apt_key.bzl", "add_apt_key")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")

add_apt_key(
    name = "with_package_keys",
    image = "@cimg_base//image",
    keys = [
        "@bazel_apt_key//file",
        "@gcloud_sdk_apt_key//file",
    ],
    user = "root",
    tags = ["manual"],
)

pkg_tar(
    name = "apt_sources",
    srcs = [
        ":bazel.list",
        ":google-cloud-sdk.list",
    ],
    strip_prefix = "/image/ci",
    package_dir = "/etc/apt/sources.list.d",
    mode = "0644",
    tags = ["manual"],
)

container_image(
    name = "with_apt_sources",
    base = ":with_package_keys.tar",
    tars = [
        ":apt_sources",
    ],
    user = "circleci",
    tags = ["manual"],
)

container_run_and_commit(
    name = "with_bazel_packages",
    image = ":with_apt_sources.tar",
    commands = [
        "sudo apt-get update",
        "sudo apt-get install -y bazel google-cloud-sdk postgresql-client",
        # run bazel once to extract the install
        "bazel",
    ],
    tags = ["manual"],
)

container_image(
    name = "bazel",
    base = ":with_bazel_packages_commit.tar",
    tags = ["manual"],
)

container_push(
    name = "bazel-push",
    image = ":bazel",
    format = "Docker",
    registry = "index.docker.io",
    repository = "mmoriarity/circleci-bazel",
    tags = ["manual"],
)
