load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth0.go",
        "claims.go",
        "config.go",
        "jwks.go",
        "mock.go",
        "request.go",
        "user.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/trace/keys:go_default_library",
        "@com_github_google_wire//:go_default_library",
        "@in_gopkg_auth0_v3//management:go_default_library",
        "@in_gopkg_dgrijalva_jwt_go_v3//:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
