load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["stripe.go"],
    importpath = "github.com/mjm/courier-js/internal/billing",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "@com_github_google_wire//:go_default_library",
        "@com_github_stripe_stripe_go//client:go_default_library",
    ],
)
