load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "env.go",
        "loader.go",
        "secret.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/config",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_wire//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["loader_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
