load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "testing.go",
        "unnest.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/secret:go_default_library",
        "//internal/trace:go_default_library",
        "@com_github_google_wire//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)
