load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "collector.go",
        "event_bus.go",
        "publisher.go",
        "pubsub.go",
        "pusher.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/event",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/secret:go_default_library",
        "//internal/trace:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_wire//:go_default_library",
        "@com_github_pusher_push_notifications_go//:go_default_library",
        "@com_github_pusher_pusher_http_go//:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["event_bus_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
