load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/functions",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/tracehttp:go_default_library",
        "@io_opentelemetry_go_otel//api/correlation:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/propagation:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
