load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "loader.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/loader",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/trace:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_graph_gophers_dataloader//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)
