load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "loader.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/loader",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_graph_gophers_dataloader//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
    ],
)
