load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["notifier.go"],
    importpath = "github.com/mjm/courier-js/internal/notifications",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/event:go_default_library",
        "//internal/resolvers:go_default_library",
        "//internal/shared/model:go_default_library",
        "//internal/shared/tweets:go_default_library",
        "//internal/trace/keys:go_default_library",
        "//internal/write/shared:go_default_library",
        "@com_github_mjm_graphql_go//relay:go_default_library",
        "@com_github_pusher_push_notifications_go//:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/kv:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "notifier_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
)
