load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cursor.go",
        "pager.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/pager",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/db:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
