load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "billing_subscription.go",
        "credit_card.go",
        "customer.go",
        "event.go",
        "event_connection.go",
        "feed.go",
        "microformats.go",
        "mutation.go",
        "node.go",
        "page_info.go",
        "post.go",
        "post_connection.go",
        "preview.go",
        "queries.go",
        "root.go",
        "subscribed_feed.go",
        "subscribed_feed_connection.go",
        "tweet.go",
        "tweet_connection.go",
        "user.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/resolvers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/auth:go_default_library",
        "//internal/db:go_default_library",
        "//internal/pager:go_default_library",
        "//internal/read/billing:go_default_library",
        "//internal/read/feeds:go_default_library",
        "//internal/read/tweets:go_default_library",
        "//internal/read/user:go_default_library",
        "//internal/shared/feeds:go_default_library",
        "//internal/shared/model:go_default_library",
        "//internal/tasks:go_default_library",
        "//internal/write:go_default_library",
        "//internal/write/billing:go_default_library",
        "//internal/write/feeds:go_default_library",
        "//internal/write/tweets:go_default_library",
        "//internal/write/user:go_default_library",
        "//pkg/indieauth:go_default_library",
        "@com_github_google_wire//:go_default_library",
        "@com_github_mjm_graphql_go//:go_default_library",
        "@com_github_mjm_graphql_go//relay:go_default_library",
        "@com_github_stripe_stripe_go//:go_default_library",
        "@com_willnorris_go_microformats//:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context/ctxhttp:go_default_library",
    ],
)
