load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "gcp_secret_manager.go",
        "secret.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/secret",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "@com_github_google_wire//:go_default_library",
        "@com_google_cloud_go//secretmanager/apiv1beta1:go_default_library",
        "@go_googleapis//google/cloud/secrets/v1beta1:secretmanager_go_proto",
        "@org_golang_google_api//option:go_default_library",
    ],
)
