load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["aws_secret_manager.go"],
    importpath = "github.com/mjm/courier-js/internal/secret",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ssm:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ssm/ssmiface:go_default_library",
        "@com_github_google_wire//:go_default_library",
    ],
)
