load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "tasks.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/tasks",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/functions:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_wire//:go_default_library",
        "@com_github_googleapis_gax_go_v2//:go_default_library",
        "@com_google_cloud_go//cloudtasks/apiv2:go_default_library",
        "@go_googleapis//google/cloud/tasks/v2:tasks_go_proto",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/propagation:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["tasks_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/shared/feeds:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_googleapis_gax_go_v2//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@go_googleapis//google/cloud/tasks/v2:tasks_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
