load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "proto_gen.go",
        "tasks.go",
        "trace.go",
    ],
    embed = [":tasks_go_proto"],
    importpath = "github.com/mjm/courier-js/internal/tasks",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/event:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/sqs:go_default_library",
        "@com_github_aws_aws_sdk_go//service/sqs/sqsiface:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_wire//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/kv:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["tasks_test.go"],
    embed = [":go_default_library"],
)

proto_library(
    name = "tasks_proto",
    srcs = ["tasks.proto"],
    visibility = ["//:__subpackages__"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "tasks_go_proto",
    importpath = "github.com/mjm/courier-js/internal/tasks",
    proto = ":tasks_proto",
    visibility = ["//:__subpackages__"],
)
