load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "dataloader.go",
        "graphql.go",
        "keys.go",
        "link.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/trace",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/shared/feeds:go_default_library",
        "//internal/shared/tweets:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_graph_gophers_dataloader//:go_default_library",
        "@com_github_honeycombio_libhoney_go//:go_default_library",
        "@com_github_honeycombio_opentelemetry_exporter_go//honeycomb:go_default_library",
        "@com_github_mjm_graphql_go//errors:go_default_library",
        "@com_github_mjm_graphql_go//introspection:go_default_library",
        "@com_github_mjm_graphql_go//trace:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//sdk/trace:go_default_library",
    ],
)
