load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "gcp.go",
        "trace.go",
        "wire_gen.go",
    ],
    importpath = "github.com/mjm/courier-js/internal/trace",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/secret:go_default_library",
        "@com_github_honeycombio_opentelemetry_exporter_go//honeycomb:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//sdk/export/trace:go_default_library",
        "@io_opentelemetry_go_otel//sdk/resource:go_default_library",
        "@io_opentelemetry_go_otel//sdk/trace:go_default_library",
    ],
)
