load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["command_bus.go"],
    importpath = "github.com/mjm/courier-js/internal/write",
    visibility = ["//:__subpackages__"],
    deps = ["@io_opentelemetry_go_otel//api/global:go_default_library"],
)
