load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "feed.go",
        "html.go",
        "json.go",
        "locate_feed.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/courier-js/pkg/locatefeed",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mmcdole_gofeed//:go_default_library",
        "@com_github_mmcdole_gofeed//extensions:go_default_library",
        "@com_github_mmcdole_gofeed//rss:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
        "@org_golang_x_net//context/ctxhttp:go_default_library",
        "@org_golang_x_net//html:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["locate_feed_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_jarcoal_httpmock//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
