load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "config.go",
        "trace.go",
        "update.go",
    ],
    importpath = "github.com/mjm/courier-js/pkg/micropub",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tracehttp:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/kv:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
    ],
)
